--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2009-04-02  Thomas Moulard  <thomas.moulard@gmail.com>
 
+	Update TODO.
+	* TODO: Here.
+
+2009-04-02  Thomas Moulard  <thomas.moulard@gmail.com>
+
 	Add linearity tag to functions.
 	* src/cfsqp.cc,
 	* src/cfsqp.hh: Expose CFSQP iprint (verbosity) level.
