Make configure detect solvers.
	* README: Document how to build a shared library from CFSQP.
	* TODO: Update, reorganize.
	* build-aux/acx_pthread.m4: New.
	* build-aux/autotest.mk: When configure is modified,
        regenerate testsuite.
	* build-aux/cfsqp.m4: New.
	* build-aux/ipopt.m4: New.
	* configure.ac: Add a soft dependency on Ipopt and CFSQP.
	* src/Makefile.am: Only build bridges for available solvers.
	* tests/Makefile.am,
	* tests/cfsqp.at,
	* tests/ipopt.at: Only test availables solvers.
	* tests/package.m4.in: Pass available solvers to test suite.
	* tests/testsuite.at: Fix documentation.

Signed-off-by: Thomas Moulard <thomas.moulard@gmail.com>

--- a/README
+++ b/README
@@ -1,3 +1,30 @@
                                                                 -*- outline -*-
 
-* FIXME
+* Why configure does not detect CFSQP?
+
+CFSQP is always distributed as a C header and source file.  As a result, you
+will have to build yourself a library to use CFSQP with liboptimization.
+
+Copy cfsqp.c qld.c and cfsqpusr.h in a directory and type:
+$ g++ cfsqp.c qld.c -shared -fPIC -o libcfsqp.so
+
+Then, make sure that gcc search for headers/libraries in this directory. For
+instance, you can call configure with additional parameters:
+
+$ cd liboptimization
+$ mkdir _build && cd _build
+$ ../configure CPPFLAGS=-I/path/to/cfsqp LDFLAGS=-L/path/to/cfsqp
+
+
+* Where is the library documentation?
+
+This README only covers configure/building issues, for more information
+regarding this library usage, please refer to the Doxygen documentation.
+
+If you have configured the package as explained in the first section, go
+into you ``_build'' directory and type:
+
+$ make doc
+
+To view the HTML documentation: go in the ``doc/html'' directory and open the
+``index.html'' file with your favorite internet browser.
