--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,21 @@
+2009-04-03  Thomas Moulard  <thomas.moulard@gmail.com>
+
+	Make configure detect solvers.
+	* README: Document how to build a shared library from CFSQP.
+	* TODO: Update, reorganize.
+	* build-aux/acx_pthread.m4: New.
+	* build-aux/autotest.mk: When configure is modified,
+        regenerate testsuite.
+	* build-aux/cfsqp.m4: New.
+	* build-aux/ipopt.m4: New.
+	* configure.ac: Add a soft dependency on Ipopt and CFSQP.
+	* src/Makefile.am: Only build bridges for available solvers.
+	* tests/Makefile.am,
+	* tests/cfsqp.at,
+	* tests/ipopt.at: Only test availables solvers.
+	* tests/package.m4.in: Pass available solvers to test suite.
+	* tests/testsuite.at: Fix documentation.
+
 2009-04-02  Thomas Moulard  <thomas.moulard@gmail.com>
 
 	Rename optimization-fwd.hh into fwd.hh, document.
