--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,25 @@
+2009-04-08  Thomas Moulard  <thomas.moulard@gmail.com>
+
+	Use new templated hierarchy.
+	* src/cfsqp.cc,
+	* src/cfsqp.hh,
+	* src/dummy.cc,
+	* src/dummy.hh,
+	* src/fwd.hh,
+	* src/ipopt.cc,
+	* src/ipopt.hh: Fix to match new hierarchy.
+	* src/problem.hh: New.
+	* src/problem.hxx: New.
+	* src/solver.cc,
+	* src/solver.hh: Fix to match new hierarchy.
+	* src/solver.hxx: Copy from src/fwd.hh.
+	* src/util.hh: Separate implementation and declaration of
+        templated functions.
+	* src/util.hxx: Copy from src/util.hh.
+	* tests/cfsqp.cc,
+	* tests/ipopt.cc,
+	* tests/simple-test.cc: Fix tests to match the new interface.
+
 2009-04-07  Thomas Moulard  <thomas.moulard@gmail.com>
 
 	Implement new interface.
