Implement LinearFunction::hessian.
	* .gitignore: Ignore _build* directories (useful for cross-compiling).
	* include/liboptimization/derivable-function.hh,
	* include/liboptimization/fwd.hh,
	* include/liboptimization/ipopt.hh: Document, fix coding style.
	* include/liboptimization/linear-function.hh: Implement hessian.
	* include/liboptimization/problem.hh,
	* include/liboptimization/quadratic-function.hh,
	* include/liboptimization/solver.hh,
	* include/liboptimization/twice-derivable-function.hh,
	* src/cfsqp.cc: Document, fix coding style.
	* src/linear-function.cc: Implement hessian.

Signed-off-by: Thomas Moulard <thomas.moulard@gmail.com>

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,20 @@
 2009-04-09  Thomas Moulard  <thomas.moulard@gmail.com>
 
+	Implement LinearFunction::hessian.
+	* .gitignore: Ignore _build* directories (useful for cross-compiling).
+	* include/liboptimization/derivable-function.hh,
+	* include/liboptimization/fwd.hh,
+	* include/liboptimization/ipopt.hh: Document, fix coding style.
+	* include/liboptimization/linear-function.hh: Implement hessian.
+	* include/liboptimization/problem.hh,
+	* include/liboptimization/quadratic-function.hh,
+	* include/liboptimization/solver.hh,
+	* include/liboptimization/twice-derivable-function.hh,
+	* src/cfsqp.cc: Document, fix coding style.
+	* src/linear-function.cc: Implement hessian.
+
+2009-04-09  Thomas Moulard  <thomas.moulard@gmail.com>
+
 	Split linear/non-linear constraints in CFSQP.
 	* build-aux/boost.m4: Detect Boost.StaticAssert and Boost.TypeTraits.
 	* configure.ac: Search for Boost.StaticAssert and Boost.TypeTraits.
